[package]
name = "eant2"
version = "0.1.0"
authors = ["pengowen123 <pengowen816@gmail.com>"]
edition = "2021"

[dependencies]
rand = "0.8.5"
typed-builder = "0.10.0"
rayon = "1.5.2"
cmaes = "0.2.1"
cge = "0.1.1"
rand_distr = "0.4.3"

[dev-dependencies]
gym-rs = { git = "https://github.com/MathisWellmann/gym-rs" }

[[example]]
name = "gym_cart_pole"
